<resources>
    <string name="app_name">Studcal</string>

    <string name="reference_title">Справка</string>
    <string name="reference_contact_support_text">Не нашли ответ на свой животрепещущий вопрос? Тогда, возможно, стоит связаться со мной через раздел поддержки, который вы найдете в настройках.</string>

    <string name="reference_group_not_found_title">Почему моя группа не хочет показываться в списке расписания?</string>
    <string name="reference_group_not_found_text">Если ваша группа решила сыграть в прятки и не показывается в списке, возможно, это не ко мне, а к сайту СВФУ. Там иногда что-то ломается. Я как бы тут ни при чем, я всего лишь приложение для просмотра. Стучите в техподдержку СВФУ, они там волшебники.</string>

    <string name="reference_incorrect_schedule_title">Как укротить неправильное или отсутствующее расписание моей группы?</string>
    <string name="reference_incorrect_schedule_text">Если расписание вашей группы вдруг решило жить своей жизнью, пропустило занятия или запуталось во времени, то нужно найти виноватых! Это не я, а те кто загружают расписание на сайт СВФУ. Обратитесь к ним, пусть наведут там порядок. Я лишь показываю то, что есть. (Ну, я же не волшебник)</string>

    <string name="reference_update_frequency_title">Как часто я пристаю к сайту СВФУ за расписанием?</string>
    <string name="reference_update_frequency_text">Я не жадный, но и не дурак! Расписание загружается и сохраняется, чтобы вы могли смотреть его даже без интернета (магия, правда?). Я выполняю парсинг 3 раза в сутки: 2 раза (с 00:00 до 12:00) как жаворонок, и 1 раз (с 12:00 до 00:00) как сова. Это, чтобы не сломать сайт СВФУ, а то все меня потом побьют.</string>

    <string name="reference_sysadmin_title">Эй, сисадмин СВФУ! Не дергайся, я тут.</string>
    <string name="reference_sysadmin_text_my_timetable_old">Моё расписание в приложении показывает старье, что делать то?!</string>
    <string name="reference_sysadmin_text_dont_worry">Не паникуй! Как говорилось ранее, расписание обновляется трижды в пол дня. Просто наберись терпения, как говорил кот Леопольд. Я знаю, что делаю. (Надеюсь). </string>

    <string name="reference_how_to_place_ad_title">Как создать объявление? (а не очередной мем про котиков)</string>
    <string name="reference_how_to_place_ad_text">Чтобы нести слово мудрости (или просто написать, что зачет завтра), выберите свою группу и нажмите на волшебный плюсик в разделе объявлений. Внимание! Любой, кто выбрал вашу группу в настройках, имеет право голоса, так что уважайте друг друга и не трогайте чужие разделы. Это как игра в песочнице – дружба и доверие, понимаешь?</string>

    <string name="reference_how_to_change_schedule_title">Можно ли мне тут редактировать расписание?</string>
    <string name="reference_how_to_change_schedule_text">Я всего лишь маленький помощник, и не лезу в дела министерства расписаний. Изменение расписания - это дело важных людей, которые загружают расписание. Если хотите что-то исправить, то не ко мне, а на кафедру. Я тут ни при чём.</string>

    <string name="reference_how_to_view_schedule_title">Можно ли посмотреть расписание за месяц вперед, а лучше за год?</string>
    <string name="reference_how_to_view_schedule_text">Для путешествий во времени (ну почти), нажмите на текущую дату, которая живет в левом верхнем углу раздела "Расписание". Откроется ваш личный портал в календарь, где вы можете выбрать любой день и посмотреть расписание на этот день.</string>

    <string name="reference_add_homework_title">Могу ли я добавить домашку и забыть про неё навсегда?</string>
    <string name="reference_add_homework_text">Да, можете! Нажмите на название предмета, и я выдам вам секретное окошко для записей о домашке. Все, кто выберут вашу группу в приложении увидят это, так что, если не хотите позора, пишите правильно (или не пишите вообще). </string>

    <string name="reference_technical_issues_title">Что делать, если что-то пошло не так и все сломалось?</string>
    <string name="reference_technical_issues_text">Если вдруг что-то пошло не по плану (а это бывает), и приложение решило показать все, что угодно, но не расписание, то обратитесь ко мне, я постараюсь помочь. Я пофиксить все баги и ошибки, и верну всё как надо. (Но вообще, лучше, чтобы ничего не ломалось).</string>

    <string name="reference_not_actual_schedule_title">Почему я вижу прошлое, а не настоящее расписание на сегодня?</string>
    <string name="reference_not_actual_schedule_text">Если вы смотрите на вчерашнее расписание, а не на сегодняшнее, то, возможно, сайт СВФУ замешкался и не обновил данные вовремя. Я с сайта СВФУ сканирую данные каждые 12 часов (2 раза утром, 1 раз вечером), так что  подождите, и завтра все будет тип-топ.</string>

    <string name="reference_how_update_app_title">Как я обновляюсь? Сам? Или у меня есть духи?</string>
    <string name="reference_how_update_app_text">Обновления выходят по настроению разработчика, его лени, вдохновению и просто так. Они могут быть доступны через мой гугл диск. При выходе обновы я сразу вам скажу, а вы уже будете решать – качать или подождать еще годик (на самом деле нет).</string>

    <string name="reference_contact_developers_title">Хочу поговорить с разработчиком, по делу и не очень (можно чаю попить)?</string>
    <string name="reference_contact_developers_text">Если у вас вдруг появилось предложение, отзыв или вы просто хотите поговорить со мной, то добро пожаловать в раздел обратной связи, он находится в настройках, там и поболтаем. Я всегда готов выслушать вас (почти всегда). </string>
</resources>