<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_setting_reference"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimaryVariant"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:fitsSystemWindows="false">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_setting_reference"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/reference_title"
            app:titleTextColor="@color/white"
            android:elevation="4dp"
            android:background="?attr/colorPrimaryVariant"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:contentInsetStart="0dp"
            app:contentInsetStartWithNavigation="0dp"/>

    </com.google.android.material.appbar.AppBarLayout>


    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/app_bar_setting_reference"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:scrollbars="vertical"
        android:animateLayoutChanges="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="15dp"
            android:paddingVertical="15dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reference_contact_support_text"
                android:textColor="?attr/colorOnSecondary"
                android:gravity="center"
                android:textSize="13sp"
                android:layout_marginBottom="10dp"
                />
            <TextView
                style="@style/ReferenceTitleStyle"
                android:layout_marginBottom="10dp"
                android:text="@string/reference_group_not_found_title" />

            <TextView
                style="@style/ReferenceTextStyle"
                android:text="@string/reference_group_not_found_text"
                android:layout_marginBottom="15dp"/>

            <TextView
                style="@style/ReferenceTitleStyle"
                android:layout_marginBottom="10dp"
                android:text="@string/reference_incorrect_schedule_title" />

            <TextView
                style="@style/ReferenceTextStyle"
                android:text="@string/reference_incorrect_schedule_text"
                android:layout_marginBottom="15dp"/>

            <TextView
                style="@style/ReferenceTitleStyle"
                android:layout_marginBottom="10dp"
                android:text="@string/reference_update_frequency_title" />

            <TextView
                style="@style/ReferenceTextStyle"
                android:text="@string/reference_update_frequency_text"
                android:layout_marginBottom="15dp"/>

            <TextView
                style="@style/ReferenceTitleStyle"
                android:layout_marginBottom="10dp"
                android:text="@string/reference_sysadmin_title"/>

            <TextView
                style="@style/ReferenceTextStyle"
                android:text="@string/reference_sysadmin_text_my_timetable_old" />

            <TextView
                style="@style/ReferenceTextStyle"
                android:text="@string/reference_sysadmin_text_dont_worry"
                android:layout_marginBottom="15dp"/>

            <TextView
                style="@style/ReferenceTitleStyle"
                android:layout_marginBottom="10dp"
                android:text="@string/reference_how_to_place_ad_title" />

            <TextView
                style="@style/ReferenceTextStyle"
                android:text="@string/reference_how_to_place_ad_text"
                android:layout_marginBottom="15dp"/>

            <TextView
                style="@style/ReferenceTitleStyle"
                android:layout_marginBottom="10dp"
                android:text="@string/reference_how_to_change_schedule_title" />

            <TextView
                style="@style/ReferenceTextStyle"
                android:text="@string/reference_how_to_change_schedule_text"
                android:layout_marginBottom="15dp"/>

            <TextView
                style="@style/ReferenceTitleStyle"
                android:layout_marginBottom="10dp"
                android:text="@string/reference_how_to_view_schedule_title"/>

            <TextView
                style="@style/ReferenceTextStyle"
                android:text="@string/reference_how_to_view_schedule_text"
                android:layout_marginBottom="15dp"/>

            <TextView
                style="@style/ReferenceTitleStyle"
                android:layout_marginBottom="10dp"
                android:text="@string/reference_add_homework_title"/>

            <TextView
                style="@style/ReferenceTextStyle"
                android:text="@string/reference_add_homework_text"
                android:layout_marginBottom="15dp"/>

            <TextView
                style="@style/ReferenceTitleStyle"
                android:layout_marginBottom="10dp"
                android:text="@string/reference_technical_issues_title" />

            <TextView
                style="@style/ReferenceTextStyle"
                android:text="@string/reference_technical_issues_text"
                android:layout_marginBottom="15dp"/>


            <TextView
                style="@style/ReferenceTitleStyle"
                android:layout_marginBottom="10dp"
                android:text="@string/reference_not_actual_schedule_title"/>

            <TextView
                style="@style/ReferenceTextStyle"
                android:text="@string/reference_not_actual_schedule_text"
                android:layout_marginBottom="15dp"/>

            <TextView
                style="@style/ReferenceTitleStyle"
                android:layout_marginBottom="10dp"
                android:text="@string/reference_how_update_app_title"/>

            <TextView
                style="@style/ReferenceTextStyle"
                android:text="@string/reference_how_update_app_text"
                android:layout_marginBottom="15dp"/>

            <TextView
                style="@style/ReferenceTitleStyle"
                android:layout_marginBottom="10dp"
                android:text="@string/reference_contact_developers_title" />

            <TextView
                style="@style/ReferenceTextStyle"
                android:text="@string/reference_contact_developers_text"
                android:layout_marginBottom="15dp"/>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>